# pycloudinary

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.txt  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  main.py  prepare.sh  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
cloudinary/: __init__.py  admin.py  akamai_token.py  api.py  auth_token.py  compat.py  forms.py  http_client.py  mo_api.py  models.py  search.py  search_folders.py  storage.py  uploader.py  utils.py  widgets.py
cloudinary.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt
cloudinary/account/: Role.py  __init__.py  account.py  account_config.py  sub_accounts.py  user_groups.py  users.py
cloudinary/api_client/: call_account_api.py  call_api.py  execute_request.py  tcp_keep_alive_manager.py
cloudinary/cache/: responsive_breakpoints_cache.py
cloudinary/cache/adapter/: cache_adapter.py  key_value_cache_adapter.py
cloudinary/cache/storage/: file_system_key_value_storage.py  key_value_storage.py
cloudinary/poster/: encode.py  streaminghttp.py
cloudinary/provisioning/: __init__.py  account.py  account_config.py  api.py  config.py  sub_accounts.py  user_groups.py  users.py
cloudinary/provisioning/account/: __init__.py  account.py  account_config.py  sub_accounts.py  user_groups.py  users.py
cloudinary/static/js/: cloudinary-file-widget.js  jquery.django.init.js
cloudinary/templates/: cloudinary_includes.html
cloudinary/templates/widgets/: admin_cloudinary_js_file.html
cloudinary/templatetags/: cloudinary.py
django_tests/: apps.py  forms.py  helper_test.py  models.py  settings.py  test_cloudinaryField.py  test_cloudinaryResource.py  test_cloudinary_file_field.py  test_user_agent.py  urls.py  views.py
django_tests/migrations/: 0001_initial.py  0002_remove_poll_pub_date.py  0003_add_poll_width_and_height.py
pycloudinary/: __init__.py  forms.py  models.py  uploader.py  utils.py
pycloudinary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pycloudinary/templatetags/: cloudinary.py
requirements/: install_requires.txt  test_requires.txt
samples/: README.md
samples/basic/: README.md  basic.py  basic_search.py  basic_upload.py
samples/basic_flask/: README.md  app.py
samples/basic_flask/templates/: upload_form.html
samples/content-creation/: README.md  cloudinary-ai-post-generator.py  settings.py
samples/content-creation/static/: index.html
samples/gae/: .gitignore  README.md  app.yaml  appengine_config.py  cloudinary.yaml.sample  index.html  main.py  requirements.txt
samples/spookyshots/: .env.example  README.md  main.py  requirements.txt
scripts/: version.sh
test/: addon_types.py  helper_test.py  test_api.py  test_api_authentication.py  test_api_authorization.py  test_archive.py  test_auth_token.py  test_cloudinary_resource.py  test_config.py  test_expression_normalization.py  test_http_client.py  test_image.py  test_metadata.py  test_metadata_rules.py  test_mo_api.py  test_oauth.py  test_provisioning_api.py  test_search.py  test_streaming_profiles.py  test_uploader.py  test_utils.py  test_video.py
test/cache/: test_responsive_breakpoints_cache.py
test/cache/adapter/: test_key_value_cache_adapter.py
test/cache/storage/: dummy_cache_storage.py  test_file_system_key_value_storage.py
test/utils/: test_unique.py
tests/: __init__.py  akamai_token_test.py  api_test.py  archive_test.py  auth_token_test.py  cloudinary_resource_test.py  config_test.py  http_client_test.py  image_test.py  search_test.py  streaming_profiles_test.py  test_helper.py  uploader_test.py  utils_test.py  video_test.py
tests/cache/: responsive_breakpoints_cache_test.py
tests/cache/adapter/: key_value_cache_adapter_test.py
tests/cache/storage/: dummy_cache_storage.py  file_system_key_value_storage_test.py
tools/: get_test_cloud.sh  update_version.sh
