[project]
name = "cloudinary"
description = "Python and Django SDK for Cloudinary"
version = "1.43.0"

authors = [{ name = "Cloudinary", email = "info@cloudinary.com" }]
license = { file = "LICENSE.txt" }
keywords = ["cloudinary", "image", "video", "upload", "crop", "resize", "filter", "transformation", "manipulation", "cdn"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "six",
    "urllib3>=1.26.5",
    "certifi"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pytest==4.6; python_version < '3.7'",
    "pytest; python_version >= '3.7'"
]

[project.urls]
Homepage = "https://cloudinary.com"
Source = "https://github.com/cloudinary/pycloudinary"
Changelog = "https://raw.githubusercontent.com/cloudinary/pycloudinary/master/CHANGELOG.md"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["samples", "tools", "test*", "django_tests*", "venv*"]
namespaces = false


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
